# daily-coding-solution

./: .gitignore  CMakeLists.txt  README.md  REAMDME.md  import.sh
solutions/: README.md
solutions/0001/: README.md  ksum.hpp  test.cpp
solutions/0002/: CMakeLists.txt  README.md  adjacent-products.hpp  test.cpp
solutions/0003/: README.md  serialize.hpp
solutions/001/: CMakeLists.txt  README.md  main.cpp  test.cpp
solutions/002/: README.md
solutions/0132/: Makefile  hitcounter.hpp  test.cpp
solutions/1/: CMakeLists.txt  README.md  ksum.cpp
solutions/2/: CMakeLists.txt
